--- a/linux/sway/config
+++ b/linux/sway/config
@@ -318,4 +318,4 @@ set $WOBSOCK $XDG_RUNTIME_DIR/wob.sock
 # TODO: figure out why these two can't go in the same line, and fix the initial bar showing on sway load
 exec rm -f $WOBSOCK && mkfifo $WOBSOCK && tail -f $WOBSOCK | wob
 exec udiskie
-exec autotiling-rs
+exec autotiling
