[sway][temp fix] only power off laptop display for now.
XDR display wakes up in a weird state after power off/on

--- a/linux/sway/config
+++ b/linux/sway/config
@@ -102,7 +102,7 @@ input 16700:34053:Dell_Dell_Universal_Receiver {
 #
 exec swayidle -w \
        timeout 300 'swaylock -f -c 000000' \
-       timeout 600 'swaymsg "output * power off"' resume 'swaymsg "output * power on"' \
+       timeout 600 'swaymsg "output eDP-1 power off"' resume 'swaymsg "output eDP-1 power on"' \
          before-sleep 'swaylock -f -c 000000'
 
 # Screen lock
