--- a/kanshi/config
+++ b/kanshi/config
@@ -9,6 +9,12 @@ profile home-xdr {
   output DP-2 disable
 }
 
+profile home-xdr-with-dummy {
+  output HDMI-A-1 disable
+  output DP-1 mode 6016x3384@60Hz scale 2 position 0,0
+  output DP-2 disable
+}
+
 profile x1-nano {
   output eDP-1 scale 1.25
 }
