[i3status-rs] s/pavucontrol/pwvucontrol
pipewire

--- a/linux/sway/i3status-rs/config.toml
+++ b/linux/sway/i3status-rs/config.toml
@@ -36,7 +36,7 @@ block = "sound"
 format = "$icon"
 [[block.click]]
 button = "left"
-cmd = "pavucontrol"
+cmd = "pwvucontrol"
 
 [[block]]
 block = "bluetooth"
