--- a/linux/sway/i3status-rs/config.toml
+++ b/linux/sway/i3status-rs/config.toml
@@ -56,6 +56,7 @@ cmd = "kitty --title floating_term nmtui connect"
 block = "battery"
 interval = 10
 empty_format = " $icon $percentage "
+missing_format =  ""
 
 [[block]]
 block = "time"
