[zed] use nixd for nix
Enforce nixd since that's a standard now and not the default in zed

--- a/zed/settings.json
+++ b/zed/settings.json
@@ -34,5 +34,10 @@
   "theme": "Gruvbox Dark Hard",
   "ui_font_size": 13,
   "ui_font_family": "Berkeley Mono",
-  "vim_mode": true
+  "vim_mode": true,
+  "languages": {
+    "Nix": {
+      "language_servers": ["nixd"]
+    }
+  }
 }
