--- a/linux/sway/config
+++ b/linux/sway/config
@@ -29,6 +29,20 @@ client.unfocused        $c_black   $c_black    $c_grey      $c_black   $c_black
 
 # Status Bar:
 #
+bar {
+  position top
+  font pango: SF Pro Display 10
+  status_command i3status-rs
+  colors {
+    separator          #111111AA 
+      background         #111111AA
+      statusline         #ffffff
+      focused_workspace  $c_darkgrey  $c_black    #ffffff
+      active_workspace   #900000      #333333     #ffffff
+      inactive_workspace $c_darkgrey  $c_darkgrey $c_lightgrey
+      urgent_workspace   #900000      #900000     #ffffff
+  }
+}
 # bar {
 #     position top
 #     font pango: SF Pro Display 10
