--- a/linux/sway/i3status-rs/config.toml
+++ b/linux/sway/i3status-rs/config.toml
@@ -9,6 +9,12 @@ warning_fg = "#F96A02"
 
 [[block]]
 block = "custom"
+command = "head -n2 ~/base/todo.md | tail -n1 | cut -f2 -d] | xargs"
+shell = "bash"
+interval = 60
+
+[[block]]
+block = "custom"
 command = "fin | ansifilter --pango | tr -d '\n'"
 shell = "bash"
 interval = 600
