[sway] manually restart wlsunset.service on launch
I never got the order of systemctl services right for this to fire after
sway launches. The resulting behavior is that wlsunset needs to be
manually restarted withing sway in order to work properly.

--- a/linux/sway/config
+++ b/linux/sway/config
@@ -302,4 +302,4 @@ exec udiskie
 # exec_always 'pkill kanshi; exec kanshi'
 exec autotiling
 exec wl-paste --watch cliphist store
-# exec_always nwg-panel
+exec systemctl --user restart wlsunset.service
