--- a/linux/sway/config
+++ b/linux/sway/config
@@ -30,10 +30,6 @@ client.unfocused        $c_black   $c_black    $c_grey      $c_black   $c_black
 # Status Bar:
 #
 bar {
-  position top
-  # tray_output none
-  # font pango: Inter Display 10
-  # font pango: SF Pro Display 10
   font pango: Berkeley Mono SemiCondensed SemiBold 10
   status_command i3status-rs
   colors {
@@ -45,10 +41,9 @@ bar {
     inactive_workspace $c_darkgrey  $c_darkgrey $c_lightgrey
     urgent_workspace   #900000      #900000     #ffffff
   }
-  # diable vertical scrolling
+  # disable scrolling on the bar to switch workspaces. volume up/down still works
   bindsym button4 nop
   bindsym button5 nop
-  # diable horizontal scrolling
   bindsym button6 nop
   bindsym button7 nop
 }
