[sway] disable fin for now
need to rewrite it with ibkr gateway, flakey at best.
also i3status-rs broke it recently

--- a/linux/i3status-rs/config.toml
+++ b/linux/i3status-rs/config.toml
@@ -13,11 +13,11 @@ command = 'grep "\- \[ \]" ~/base/todo.md | head -n 1 | cut -f2 -d] | xargs'
 shell = "bash"
 interval = 60
 
-[[block]]
-block = "custom"
-command = "fin | ansifilter --pango | tr -d '\n'"
-shell = "bash"
-interval = 60
+# [[block]]
+# block = "custom"
+# command = "fin | ansifilter --pango | tr -d '\n'"
+# shell = "bash"
+# interval = 60
 
 [[block]]
 block = "custom"
