--- a/ghostty/config
+++ b/ghostty/config
@@ -3,4 +3,4 @@ font-size = 11
 keybind = ctrl+enter=unbind
 shell-integration-features = no-cursor
 theme = IR_Black
-window-decoration = false
+# window-decoration = false
