--- a/linux/sway/config
+++ b/linux/sway/config
@@ -77,6 +77,7 @@ bindswitch --reload --locked lid:off output $laptop enable
 input * {
     repeat_delay 175
     repeat_rate  150
+    pointer_accel 0.75 # speed up logitech mouse. revise if other mice too fast
     natural_scroll enabled
 }
 
