--- a/linux/sway/config
+++ b/linux/sway/config
@@ -103,15 +103,15 @@ output eDP-1 {
   scale 1.25
 }
 
-### Idle configuration
-#
+# Idle configuration
 exec swayidle -w \
-       timeout 300 'swaylock -f -c 000000' \
-       timeout 600 'swaymsg "output * power off"' resume 'swaymsg "output * power on"' \
-         before-sleep 'swaylock -f -c 000000'
+       timeout 300 'gtklock' \
+       timeout 600 'swaymsg "output * power off"' \
+       resume 'swaymsg "output * power on"' \
+       before-sleep 'gtklock'
 
 # Screen lock
-bindsym $mod+Shift+q exec swaylock -f -c 000000
+bindsym $mod+Shift+q exec gtklock
 
 
 # Drag floating windows by holding down $mod and left mouse button.
