--- a/linux/sway/config
+++ b/linux/sway/config
@@ -180,11 +180,21 @@ bindsym $mod+$alt+$left move workspace to output left
 # Workspaces:
 #
 # Switch to workspace
-bindsym $mod+1 workspace number 1
-bindsym $mod+2 workspace number 2
-bindsym $mod+3 workspace number 3
-bindsym $mod+4 workspace number 4
-bindsym $mod+5 workspace number 5
+# bindsym $mod+1 workspace number 1
+# bindsym $mod+2 workspace number 2
+# bindsym $mod+3 workspace number 3
+# bindsym $mod+4 workspace number 4
+# bindsym $mod+5 workspace number 5
+# bindsym $mod+6 workspace number 6
+# bindsym $mod+7 workspace number 7
+# bindsym $mod+8 workspace number 8
+# bindsym $mod+9 workspace number 9
+
+bindsym $mod+a workspace number 1
+bindsym $mod+s workspace number 2
+bindsym $mod+d workspace number 3
+bindsym $mod+f workspace number 4
+bindsym $mod+g workspace number 5
 bindsym $mod+6 workspace number 6
 bindsym $mod+7 workspace number 7
 bindsym $mod+8 workspace number 8
@@ -192,11 +202,11 @@ bindsym $mod+9 workspace number 9
 bindsym $mod+0 scratchpad show
 
 # Move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace number 1
-bindsym $mod+Shift+2 move container to workspace number 2
-bindsym $mod+Shift+3 move container to workspace number 3
-bindsym $mod+Shift+4 move container to workspace number 4
-bindsym $mod+Shift+5 move container to workspace number 5
+bindsym $mod+Shift+a move container to workspace number 1
+bindsym $mod+Shift+s move container to workspace number 2
+bindsym $mod+Shift+d move container to workspace number 3
+bindsym $mod+Shift+f move container to workspace number 4
+bindsym $mod+Shift+g move container to workspace number 5
 bindsym $mod+Shift+6 move container to workspace number 6
 bindsym $mod+Shift+7 move container to workspace number 7
 bindsym $mod+Shift+8 move container to workspace number 8
@@ -208,13 +218,14 @@ bindsym $mod+Shift+9 move container to workspace number 9
 bindsym $mod+backslash splith
 bindsym $mod+minus splitv
 
-# Switch the current container between different layout styles
-bindsym $mod+Shift+s layout stacking
-bindsym $mod+Shift+w layout tabbed
-bindsym $mod+Shift+d layout default
-
+# # Switch the current container between different layout styles
+# TODO: figure out what to do with these. not really using it at all
+# bindsym $mod+Shift+s layout stacking
+# bindsym $mod+Shift+w layout tabbed
+# bindsym $mod+Shift+d layout default
+#
 # Make the current focus fullscreen
-bindsym $mod+f fullscreen
+bindsym $mod+m fullscreen
 
 # Toggle the current focus between tiling and floating mode
 bindsym $mod+Shift+space floating toggle
@@ -226,7 +237,7 @@ bindsym $mod+Shift+0 move container to scratchpad
 bindsym $mod+$alt+space focus mode_toggle
 
 # Move focus to the parent container
-bindsym $mod+a focus parent
+# bindsym $mod+a focus parent
 
 
 # CMD - tab behavior - experimenting
