--- a/linux/sway/config
+++ b/linux/sway/config
@@ -108,15 +108,15 @@ output eDP-1 {
   scale 1.25
 }
 
-# Idle configuration
+### Idle configuration
+#
 exec swayidle -w \
-       timeout 300 'gtklock' \
-       timeout 600 'swaymsg "output * power off"' \
-       resume 'swaymsg "output * power on"' \
-       before-sleep 'gtklock'
+       timeout 300 'swaylock -f -c 000000' \
+       timeout 600 'swaymsg "output * power off"' resume 'swaymsg "output * power on"' \
+         before-sleep 'swaylock -f -c 000000'
 
 # Screen lock
-bindsym $mod+Shift+q exec gtklock
+bindsym $mod+Shift+q exec swaylock -f -c 000000
 
 
 # Drag floating windows by holding down $mod and left mouse button.
